# variety

./: .bzrignore  .gitignore  .isort.cfg  .mailmap  .quickly  03_all_variety-0.4.20_desktop_QA_issues.patch  AUTHORS  CHANGELOG.txt  CONTRIBUTING.md  MANIFEST  MANIFEST.in  README.md  cmt_20142.xls  data  pyproject.toml  reddit.patch  requirements.txt  setup.py  shell.nix  tests_fixes.patch  variety-slideshow.desktop.in  variety.appdata.xml  variety.desktop  variety.desktop.in
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  tests.yml
.tx/: config
apport/: source_variety.py
configs/: variety-example.conf  variety.conf
data/: variety-autostart.desktop.template  variety-profile.desktop.template
data/config/: filters.txt  sources.txt  ui.conf  variety.conf
data/html/: panoramio.html
data/panoramio/: panoramio.html  panoramio.js  style.css
debian/: changelog  control  copyright  postrm  rules  variety.1  variety.lintian-overrides  variety.manpages
debian_bak2/: changelog  control
jumble/: IPlugin.py  Jumble.py
plugins/: QuotesDaddySource.py
po/: bg.po  ca.po  de.po  es.po  fi.po  fr.po  ja.po  ko.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sr.po  tr.po  uk.po  variety.pot  zh_CN.po
serverside/: variety_server_options.json
snippets/: avgcolor.py  dlwallpaper.py  indicatorexample.py  listfiles.py  setwp.py
tests/: TestAPODDownloader.py  TestArtStationDownloader.py  TestAttrDict.py  TestBingDownloader.py  TestChromeOSWallpapersDownloader.py  TestDesktopprDownloader.py  TestDownloader.py  TestEarthDownloader.py  TestEartviewDownloader.py  TestEuropeanaConfigurableDownloader.py  TestEuropeanaDownloader.py  TestFlickrCcDownloader.py  TestFlickrDownloader.py  TestGoodreadsSource.py  TestImageFetcher.py  TestJumble.py  TestMediaRssDownloader.py  TestNationalGeographicDownloader.py  TestPanoramioDownloader.py  TestPlugit.py  TestQuotationsPageSource.py  TestQuotesDaddySource.py  TestQuotesEngine.py  TestRedditDownloader.py  TestRedditSource.py  TestUnsplashConfigurableDownloader.py  TestUnsplashDownloader.py  TestUtil.py  TestVarietyWindow.py  TestWallhavenDownloader.py  __init__.py  proba.py  test.svg.metadata.json  test.svg.txt  test_detect_desktop.bats  test_example.py  test_lint.py  test_ui_signals.py  test_wn_scraper.py
toolchain/: autoformat  generate-pot  pre-commit-autoformat
variety/: APODDownloader.py  AboutVarietyDialog.py  AbstractAddByQueryDialog.py  AddConfigurableDialog.py  AddFlickrDialog.py  AddMediaRssDialog.py  AddPanoramioDialog.py  AddRedditDialog.py  AddSourceDialog.py  AddWallbaseDialog.py  AddWallhavenDialog.py  AddWallpapersNetCategoryDialog.py  AttrDict.py  AvgColor.py  BingDownloader.py  CalibrateDominantColors.py  DesktopprDownloader.py  DominantColors.py  Downloader.py  EarthDownloader.py  EditFavoriteOperationsDialog.py  FacebookFirstRunDialog.py  FacebookHelper.py  FacebookPublishDialog.py  FlickrCcDownloader.py  FlickrDownloader.py  FloatingWindow.py  FolderChooser.py  ImageFetcher.py  LoginOrRegisterDialog.py  MediaRssDownloader.py  Options.py  PanoramioDownloader.py  PreferDarkThemeListener.py  PreferencesVarietyDialog.py  PrivacyNoticeDialog.py  QuoteWriter.py  QuotesEngine.py  RecommendedDownloader.py  RedditDownloader.py  (+23 more)
variety_lib/: AboutDialog.py  Builder.py  PreferencesDialog.py  Window.py  __init__.py  build_hooks.py  helpers.py  varietyconfig.py
varietyslideshow/: varietyslideshow.py
(+189 files in other folders)
